fix(ui-elements): Make Link work with TruncateText
fixes: INSTUI-1733

This commit:
- Deprecates the ellipsis prop
- Adds a display prop
- Makes TruncateText work as a child of Link
- Updates BreadcrumbLink to use TruncateText instead
  of the ellipsis property, and removes some CSS specific
  to IE and Firefox that is no longer necessary

Test plan:
- Confirm the examples in the new "Truncating text"
  section of the Link docs in all supported browsers
- Confirm that there are no regressions to the
  deprecated ellipsis prop:
  <Link href="#" ellipsis>lorem.paragraph()</Link>
- Confirm there there are no regressions to the
  other Link examples
- Confirm that using Link's display prop when TruncateText
  is a child -- or when the icon prop is used -- creates a
  console warning

Reviewed-on: https://gerrit.instructure.com/178643
Tested-by: Jenkins
Product-Review: Pam Hiett <phiett@instructure.com>
QA-Review: Daniel Sasaki <dsasaki@instructure.com>

--- a/packages/ui-breadcrumb/src/components/Breadcrumb/styles.css
+++ b/packages/ui-breadcrumb/src/components/Breadcrumb/styles.css
@@ -7,10 +7,6 @@
   list-style-type: none;
   overflow: visible;
   display: flex;
-  align-items: baseline;
-}
-
-.root.preferAlignCenter {
   align-items: center;
 }
 
